# truffle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build_android.sh  pyproject.toml  requirements.txt
PiggyTradeNative/: Security_Audit.md
PiggyTradeNative/app/: build.gradle.kts
PiggyTradeNative/app/src/main/: AndroidManifest.xml
PiggyTradeNative/app/src/main/java/com/piggytrade/piggytrade/: MainActivity.kt  PiggyApplication.kt
PiggyTradeNative/app/src/main/java/com/piggytrade/piggytrade/blockchain/: ErgoPayReceiver.kt  ErgoSigner.kt  TradeMapper.kt  Trader.kt  TxBuilder.kt
PiggyTradeNative/app/src/main/java/com/piggytrade/piggytrade/data/: OraclePriceStore.kt  PreferenceManager.kt  TokenRepository.kt
PiggyTradeNative/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_round_foreground.xml
PiggyTradeNative/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
PiggyTradeNative/gradle/: libs.versions.toml
Truffle/app/pro/release/: output-metadata.json
Truffle/app/pro/release/baselineProfiles/0/: app-pro-release.dm
Truffle/app/pro/release/baselineProfiles/1/: app-pro-release.dm
Truffle/app/src/main/: AndroidManifest.xml
Truffle/app/src/main/java/com/piggytrade/piggytrade/: MainActivity.kt  TruffleApplication.kt
all_tokens/: tokens._all.json
src/: tokens.json
src/piggytrade/: __main__.py  amm.py  app.py  biometrics.py  config.py  ergpy_signer.py  node_client.py  platform_setup.py  theme.py  token_manager.py  trade_mapper.py  trader_ergpy.py  tx_builder.py  ui_views.py  wallet_manager.py
src/piggytrade/resources/: tokens.json
(+73 files in other folders)
